UE_TOB/tps/.svn/pristine/50/5005e28fea7d68c7f1c0c209a2cd6e0aa580944e.svn-base
allumettes/Jouer.java:4: error: ';' expected
import ArrayUtils.*
                   ^
allumettes/Jouer.java:57: error: ';' expected
				throw new ConfigurationException("Le premier argument n'est pas reconnu.")
				                                                                          ^
2 errors
